<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gestionnaire De Note</string>
    <string name="choiseMenu">Choix du volet</string>
    <string name="VoletEsg">Enseignant</string>
    <string name="VoletEdt">Etudiant</string>
    <string name="VoletAdm">Administration</string>
    <string name="icon_string_ajouter">Ajouter</string>
    <string name="barre_string_etudiant">Devoir</string>
    <string name="icon_string_lister">Lister</string>
    <string name="icon_string_supprimer">Supprimer</string>
    <string name="barre_string_enseignant">Enseignant</string>
    <string name="icon_string_profil">Profil</string>
    <string name="icon_string_devoir">Devoir</string>
    <string name="icon_string_barre_devoir">Devoir</string>
    <string name="icon_string_modifier">Modifier</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="naissance">Date de Naissance</string>
    <string name="confirmer">Confirmer</string>
    <string name="id_etudiant">Numéro Etudiant</string>
    <string name="id_enseignant">Numéro Enseignant</string>
    <string name="matiere">Matière</string>
    <string name="type_devoir">Type de devoir</string>
    <string name="Note">Note</string>
    <string name="annuler">Annuler</string>
    <string name="genre">Genre</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Féminin</string>
    <string name="autre">Autre</string>
    <string name="date_de_naissance">Date de naissance:</string>


</resources>
