<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".AjouterDevoir"
    android:layout_marginTop="25sp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_NomEtudiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_PrenomEtudiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="50"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Birthdate_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:counterMaxLength="50"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_de_naissance"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/gender_fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminin"
                android:textSize="20sp"
                />

            <RadioButton
                android:id="@+id/gender_masc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculin"
                android:textSize="20sp"
                />

            <RadioButton
                android:id="@+id/gender_autre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autre"
                android:textSize="20sp"
                />

        </RadioGroup>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Numéro de téléphone"
            />
    </com.google.android.material.textfield.TextInputLayout>



<Button
android:id="@+id/confirmer_devoir"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/confirmer"/>

<Button
android:id="@+id/annuler_devoir"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/annuler"
android:onClick="cliqueAnnuler1"/>

</LinearLayout>


